Another attempt to fix the select2 dropdown background problem in dark mode

--- a/application/public/css/select2-bootstrap.css
+++ b/application/public/css/select2-bootstrap.css
@@ -75,4 +75,8 @@ ul.select2-selection__rendered {
         border-color: #6c757d;
         color: #dee2e6;
     }
+    .select2-results__option,
+    .select2-results__message {
+        background-color: #495057;
+    }
 }
